# Acidentes-BR-2023

./: Análise_Acidentes_Rodoviários_BR.ipynb  Análise_Acidentes_Rodoviários_BR_2023.ipynb  README.md  Untitled.ipynb  dados_acidentes_PRF_downloader.py  graficos.ipynb  graph.py  pyproject.toml  web_scraping.py
.ipynb_checkpoints/: Análise_Acidentes_Rodoviários_BR_2023-checkpoint.ipynb  graficos-checkpoint.ipynb
utils/: data_scraping.py
