[tool.poetry]
name = "data-science-acidentes-br-2023"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.requests.dependencies]
bs4 = "^0.0.1"
tqdm = "^4.66.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
folium = "^0.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
